# CI-ANALYZER

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/minimal/: README.md  experiment.yaml
examples/minimal/data/: baseline.csv  optimized.csv
reference/: README.md
reference/expected/: computed_metrics.json  summary_report.md  summary_tables.csv
reference/input/dependency_baseline/: metrics_no_dependency_cache_run1.json  metrics_no_dependency_cache_run10.json  metrics_no_dependency_cache_run2.json  metrics_no_dependency_cache_run3.json  metrics_no_dependency_cache_run4.json  metrics_no_dependency_cache_run5.json  metrics_no_dependency_cache_run6.json  metrics_no_dependency_cache_run7.json  metrics_no_dependency_cache_run8.json  metrics_no_dependency_cache_run9.json
reference/original/: analyze_ci_experiments.py  ci_select_tests.py
reference/supporting/: test_file_timings.json
src/ci_experiment_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  comparisons.py  config.py  errors.py  impact.py  models.py  normalization.py  readers.py  reports.py  statistics.py  validation.py
tests/: test_analyzer.py  test_cli_analyze.py  test_cli_validate.py  test_comparisons.py  test_config.py  test_config_errors.py  test_data_validation.py  test_format_equivalence.py  test_impact.py  test_json_reader.py  test_jsonl_reader.py  test_negative_metric_values.py  test_normalization.py  test_readers.py  test_reports.py  test_smoke.py  test_statistics.py  test_validation.py
(+18 files in other folders)
