[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-experiment-analyzer"
version = "0.1.0"
description = "A Python CLI tool for reproducible analysis of CI pipeline optimization experiments."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
    { name = "Denis Masyutin" }
]
dependencies = [
    "PyYAML"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "types-PyYAML",
]

[project.scripts]
ci-analyzer = "ci_experiment_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "UP"
]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"